--- a/src/components/Photo.css
+++ b/src/components/Photo.css
@@ -32,3 +32,41 @@
     margin: 0 auto;
     display: block; 
 }
+.col {
+    height: 264px;
+    position: relative; 
+  }
+  .col:before, .col:after {
+      content: '';
+      display: block;
+      width: 50%;
+      height: 120%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 2; 
+  }
+  .col:after {
+      left: auto;
+      right: 10;
+  }
+.cards-slider-wrapper {
+    display: flex;
+    position: absolute;
+    transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955); 
+  }
+  .cards-slider-wrapper .card {
+      flex: 1;
+      min-width: 22.5%;
+      opacity: 0.7;
+      transform: scale(0.8);
+      transition: opacity 300ms linear, border-color 300ms linear, background-color 300ms linear, transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955); 
+  }
+  .cards-slider.active-slide-0 #card-0 {
+    opacity: 1;
+    transform: scale(1.0);
+    outline: 5px solid rgb(0, 106, 255)
+}
+.cards-slider.active-slide-0 #card-0 .details {
+      opacity: 1;
+}
