--- a/src/components/Photo.css
+++ b/src/components/Photo.css
@@ -62,6 +62,10 @@
       transform: scale(0.8);
       transition: opacity 300ms linear, border-color 300ms linear, background-color 300ms linear, transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955); 
   }
+.cards-slider-wrapper .card .details {
+    opacity: 0;
+    transition: opacity 150ms linear; 
+}
   .cards-slider.active-slide-0 #card-0 {
     opacity: 1;
     transform: scale(1.0);
@@ -107,3 +111,6 @@
     transform: scale(1);
     outline: 5px solid rgb(0, 106, 255)
    }
+.cards-slider.active-slide-5 #card-5 .details {
+    opacity: 1; 
+}
